배운내용 활용해보기

--- a/css/clotheShop.html
+++ b/css/clotheShop.html
@@ -19,7 +19,6 @@
       </nav>
     </header>
     <img class="main_img" src="assets/apparel.png" alt="" />
-<br><br>
     <main>
       <article class="article1">
         <div class="about">
@@ -29,54 +28,63 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
               deleniti facilis recusandae non aspernatur nam rerum repellat
-              reiciendis inventore iste, molestiae necessitatibus, voluptas nulla,
-              quibusdam ducimus atque aliquid adipisci minus! Recusandae debitis
-              velit reprehenderit praesentium repellendus modi est, blanditiis
-              neque consequatur in libero rerum saepe voluptatibus sit at ducimus
-              suscipit consectetur eum incidunt nostrum aut vel, laborum quis
-              temporibus. Tempore!
+              reiciendis inventore iste, molestiae necessitatibus, voluptas
+              nulla, quibusdam ducimus atque aliquid adipisci minus! Recusandae
+              debitis velit reprehenderit praesentium repellendus modi est,
+              blanditiis neque consequatur in libero rerum saepe voluptatibus
+              sit at ducimus suscipit consectetur eum incidunt nostrum aut vel,
+              laborum quis temporibus. Tempore!
             </p>
-          </div>
-        </section>
+          </section>
+        </div>
       </article>
 
+      <br /><br />
       <h3>Contact Us</h3>
       <article class="article2">
         <form action="">
-          <span>Username</span>
-          <br />
-          <input type="text" />
-          <br />
-          <span>Email</span>
-          <br />
-          <input type="text" />
-          <br />
-          <input type="button" value="send" />
+          <div class="form-wrap">
+            <label for="userName">Username</label>
+            <input
+              type="text"
+              name="userName"
+              id="userName"
+              placeholder="Username"
+            />
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" placeholder="Email" />
+            <input id="sendBtn" type="button" value="send" />
+          </div>
         </form>
         <img class="article2_img" src="assets/apparel3.jpg" alt="" />
       </article>
 
+      <br /><br />
       <h3>More</h3>
       <article class="article3">
         <ul>
           <li>
             <img src="assets/mail.png" alt="" />
             <span>Email Address</span>
+            <br />
             <span>hphkor@hphk.kr</span>
           </li>
           <li>
-            <img  src="assets/telephone.png" alt=""/>
+            <img src="assets/telephone.png" alt="" />
             <span>Phone Number</span>
-            <span></span>
+            <br />
+            <span>010-1234-5678</span>
           </li>
           <li>
-            <img  src="assets/circle.png" alt=""/>
+            <img src="assets/circle.png" alt="" />
             <span>Location</span>
+            <br />
             <span>서울특별시 도곡동</span>
           </li>
           <li>
             <img src="assets/clock.png" alt="" />
             <span>Working Hours</span>
+            <br />
             <span>9am ~ 6pm</span>
           </li>
         </ul>
