--- a/css/practice_flex.html
+++ b/css/practice_flex.html
@@ -32,7 +32,7 @@
       <div></div>
     </div>
     <hr />
-    <div class="six_container">
+    <div class="six_container">/
       <div></div>
       <div></div>
       <div></div>
